force-app/main/default/objects/Desk_Case_Migration__c/fields/CurrencyISOCode__c.field-meta.xml
<CustomField>
    <fullName>CurrencyISOCode__c</fullName>
    <label>Currency ISO Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CAD</fullName>
            </value>
            <value>
                <fullName>INR</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>