force-app/main/default/objects/Desk_Case_Migration__c/fields/custom_call_duration__c.field-meta.xml
<CustomField>
    <fullName>custom_call_duration__c</fullName>
    <label>Call Duration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>