force-app/main/default/objects/Desk_Case_Migration__c/fields/custom_category__c.field-meta.xml
<CustomField>
    <fullName>custom_category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Please Select</fullName>
            </value>
            <value>
                <fullName>Control4 Driver Issue</fullName>
            </value>
            <value>
                <fullName>Control4 Driver Query</fullName>
            </value>
            <value>
                <fullName>Control4 Driver Request</fullName>
            </value>
            <value>
                <fullName>Control4 Issues</fullName>
            </value>
            <value>
                <fullName>Feature Support Query</fullName>
            </value>
            <value>
                <fullName>Firmware Query</fullName>
            </value>
            <value>
                <fullName>Firmware Troubleshooting</fullName>
            </value>
            <value>
                <fullName>Firmware Upgrade</fullName>
            </value>
            <value>
                <fullName>Hardware Issue</fullName>
            </value>
            <value>
                <fullName>MERGE Sensor Issue</fullName>
            </value>
            <value>
                <fullName>IXM WEB/Firmware Request</fullName>
            </value>
            <value>
                <fullName>IXM WEB &amp; Firmware Troubleshooting</fullName>
            </value>
            <value>
                <fullName>IXM WEB &amp; Firmware Upgrade</fullName>
            </value>
            <value>
                <fullName>IXM WEB Query</fullName>
            </value>
            <value>
                <fullName>IXM WEB Troubleshooting</fullName>
            </value>
            <value>
                <fullName>IXM WEB Upgrade</fullName>
            </value>
            <value>
                <fullName>IXM Convert Query</fullName>
            </value>
            <value>
                <fullName>License Request</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>SDK Issue</fullName>
            </value>
            <value>
                <fullName>SDK Query</fullName>
            </value>
            <value>
                <fullName>SDK Upgrade</fullName>
            </value>
            <value>
                <fullName>SDK2 Issue</fullName>
            </value>
            <value>
                <fullName>SDK2 Query</fullName>
            </value>
            <value>
                <fullName>SDK2 Upgrade</fullName>
            </value>
            <value>
                <fullName>Third Party Software/Tool Issue</fullName>
            </value>
            <value>
                <fullName>Training Request</fullName>
            </value>
            <value>
                <fullName>Wiring Connection Query</fullName>
            </value>
            <value>
                <fullName>Secure Relay Query</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>