force-app/main/default/objects/Desk_Case_Migration__c/fields/custom_device_family__c.field-meta.xml
<CustomField>
    <fullName>custom_device_family__c</fullName>
    <label>Device Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>