force-app/main/default/objects/Desk_Case_Migration__c/fields/custom_device_type__c.field-meta.xml
<CustomField>
    <fullName>custom_device_type__c</fullName>
    <label>Device Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>