force-app/main/default/objects/Desk_Case_Migration__c/fields/custom_hour_received__c.field-meta.xml
<CustomField>
    <fullName>custom_hour_received__c</fullName>
    <label>Hour Received</label>
    <length>255</length>
    <type>Text</type>
</CustomField>