force-app/main/default/objects/Desk_Case_Migration__c/fields/custom_ixm_web_version__c.field-meta.xml
<CustomField>
    <fullName>custom_ixm_web_version__c</fullName>
    <label>IXM WEB Version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1.1.6.0</fullName>
            </value>
            <value>
                <fullName>1.1.7.1</fullName>
            </value>
            <value>
                <fullName>1.2.3.0</fullName>
            </value>
            <value>
                <fullName>1.2.6.0</fullName>
            </value>
            <value>
                <fullName>1.2.7.0</fullName>
            </value>
            <value>
                <fullName>1.2.10.1</fullName>
            </value>
            <value>
                <fullName>1.2.14.0</fullName>
            </value>
            <value>
                <fullName>1.2.16.1</fullName>
            </value>
            <value>
                <fullName>1.2.16.0</fullName>
            </value>
            <value>
                <fullName>1.2.20.0</fullName>
            </value>
            <value>
                <fullName>1.3.0.0</fullName>
            </value>
            <value>
                <fullName>1.4.0.0</fullName>
            </value>
            <value>
                <fullName>1.4.9.0</fullName>
            </value>
            <value>
                <fullName>1.5.0.0</fullName>
            </value>
            <value>
                <fullName>1.5.5.8</fullName>
            </value>
            <value>
                <fullName>1.6.0.0</fullName>
            </value>
            <value>
                <fullName>1.5.2.6</fullName>
            </value>
            <value>
                <fullName>1.7.0.0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>