force-app/main/default/objects/Desk_Case_Migration__c/fields/custom_number_of_devices__c.field-meta.xml
<CustomField>
    <fullName>custom_number_of_devices__c</fullName>
    <label>Number of Devices</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>