force-app/main/default/objects/Desk_Case_Migration__c/fields/custom_rma_category__c.field-meta.xml
<CustomField>
    <fullName>custom_rma_category__c</fullName>
    <label>RMA Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Please Select</fullName>
            </value>
            <value>
                <fullName>Normal RMA</fullName>
            </value>
            <value>
                <fullName>Recall Devices</fullName>
            </value>
            <value>
                <fullName>Return for Credit</fullName>
            </value>
            <value>
                <fullName>Advance Replacement</fullName>
            </value>
            <value>
                <fullName>Invixium Certified Product</fullName>
            </value>
            <value>
                <fullName>IO Cable Replacement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>