force-app/main/default/objects/Desk_Case_Migration__c/fields/custom_rma_initiate_date__c.field-meta.xml
<CustomField>
    <fullName>custom_rma_initiate_date__c</fullName>
    <label>RMA Initiate Date</label>
    <type>DateTime</type>
</CustomField>