force-app/main/default/objects/Desk_Case_Migration__c/fields/custom_rma_number__c.field-meta.xml
<CustomField>
    <fullName>custom_rma_number__c</fullName>
    <label>RMA Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>