force-app/main/default/objects/Desk_Case_Migration__c/fields/custom_rma_status__c.field-meta.xml
<CustomField>
    <fullName>custom_rma_status__c</fullName>
    <label>RMA Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initiated</fullName>
            </value>
            <value>
                <fullName>Device Received</fullName>
            </value>
            <value>
                <fullName>Under Reapired</fullName>
            </value>
            <value>
                <fullName>Repaired</fullName>
            </value>
            <value>
                <fullName>Shipping Back</fullName>
            </value>
            <value>
                <fullName>Replacement</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>