force-app/main/default/objects/Desk_Case_Migration__c/fields/custom_team_viewer_duration__c.field-meta.xml
<CustomField>
    <fullName>custom_team_viewer_duration__c</fullName>
    <label>Team Viewer Duration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>