force-app/main/default/objects/Desk_Case_Migration__c/fields/custom_warranty_status__c.field-meta.xml
<CustomField>
    <fullName>custom_warranty_status__c</fullName>
    <label>Warranty Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under Warranty</fullName>
            </value>
            <value>
                <fullName>Out of Warranty</fullName>
            </value>
            <value>
                <fullName>Mixed Warranty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>