force-app/main/default/objects/Desk_Case_Migration__c/fields/DESKSCMT_Assigned_User_Id__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT_Assigned_User_Id__c</fullName>
    <label>Assigned User Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>