force-app/main/default/objects/Desk_Case_Migration__c/fields/DESKSCMT_Blurb__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT_Blurb__c</fullName>
    <label>Blurb</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>