force-app/main/default/objects/Desk_Case_Migration__c/fields/DESKSCMT_CaseId__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT_CaseId__c</fullName>
    <label>CaseId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>