force-app/main/default/objects/Desk_Case_Migration__c/fields/DESKSCMT_ContactId__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT_ContactId__c</fullName>
    <label>ContactId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>