force-app/main/default/objects/Desk_Case_Migration__c/fields/DESKSCMT_Description__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT_Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>