force-app/main/default/objects/Desk_Case_Migration__c/fields/DESKSCMT_Error__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT_Error__c</fullName>
    <label>Error</label>
    <type>TextArea</type>
</CustomField>