force-app/main/default/objects/Desk_Case_Migration__c/fields/DESKSCMT_Labels__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT_Labels__c</fullName>
    <label>Labels</label>
    <type>TextArea</type>
</CustomField>