force-app/main/default/objects/Desk_Case_Migration__c/fields/DESKSCMT_No_Of_Attachments__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT_No_Of_Attachments__c</fullName>
    <label>No Of Attachments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>