force-app/main/default/objects/Desk_Case_Migration__c/fields/DESKSCMT_OwnerId__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT_OwnerId__c</fullName>
    <label>OwnerId</label>
    <length>28</length>
    <type>Text</type>
</CustomField>