force-app/main/default/objects/Desk_Case_Migration__c/fields/DESKSCMT_Priority__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT_Priority__c</fullName>
    <label>Priority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>