force-app/main/default/objects/Desk_Case_Migration__c/fields/DESKSCMT_Status__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT_Status__c</fullName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>