force-app/main/default/objects/Desk_Case_Migration__c/fields/DESKSCMT_Subject__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT_Subject__c</fullName>
    <label>Subject</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>