force-app/main/default/objects/Desk_Case_Migration__c/fields/first_opened_at__c.field-meta.xml
<CustomField>
    <fullName>first_opened_at__c</fullName>
    <label>First Opened At</label>
    <type>DateTime</type>
</CustomField>