force-app/main/default/objects/Desk_Case_Migration__c/fields/opened_at__c.field-meta.xml
<CustomField>
    <fullName>opened_at__c</fullName>
    <label>Opened At</label>
    <type>DateTime</type>
</CustomField>