force-app/main/default/objects/Desk_Case_Migration__c/fields/resolved_at__c.field-meta.xml
<CustomField>
    <fullName>resolved_at__c</fullName>
    <label>Resolved At</label>
    <type>DateTime</type>
</CustomField>